--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div id="top-img"></div>
           <h1 id="top-title">Haruna.N's portfolio</h1>
             <div id="pdf">
-              <a href="https://drive.google.com/file/d/1czXzXj35lGNcgtMZZ8J9_EGiPrG_uaOu/view?usp=share_link">PDF版をダウンロードする</a>
+              <a href="https://drive.google.com/file/d/1czXzXj35lGNcgtMZZ8J9_EGiPrG_uaOu/view?usp=share_link" target="_blank" rel="noopener noreferrer">PDF版をダウンロードする</a>
             </div>
       </div>
       <!-- //top -->
@@ -107,21 +107,21 @@
           <div id="text-wrapper-works">
           <!-- Katten -->
             <div class="works-content">
-                <a id="katten" href="https://www.notion.so/Katten-ed84453a15f745c0973f7a2fb6ca5fe0">Katten</a>
+                <a id="katten" href="https://www.notion.so/Katten-ed84453a15f745c0973f7a2fb6ca5fe0" target="_blank" rel="noopener noreferrer">Katten</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”いつでも見られる物置棚”</p>
             </div>
 
           <!-- Craftshop -->
             <div class="works-content">
-                <a id="craftshop" href="https://www.notion.so/Craft-shop-c68645c633dc41aea2c26dbd52147b64">Craftshop</a>
+                <a id="craftshop" href="https://www.notion.so/Craft-shop-c68645c633dc41aea2c26dbd52147b64" target="_blank" rel="noopener noreferrer">Craftshop</a>
                 <p>ECサイト・ロゴデザイン</p>
                 <p>”愛される手仕事を伝える名刺”</p>
             </div>
 
           <!-- yaotan -->
             <div class="works-content">
-                <a id="yaotan" href="https://www.notion.so/834df43eb3134867a125a275e10fd272">やおたん</a>
+                <a id="yaotan" href="https://www.notion.so/834df43eb3134867a125a275e10fd272" target="_blank" rel="noopener noreferrer">やおたん</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”地域を、お店から好きになる。”</p>
             </div>
@@ -138,11 +138,11 @@
           <div id="text-wrapper-contact">
             <h4 class="subtitle">お気軽にお問合せください。</h3>
               <div id="contact-social">
-                <a href="https://note.com/oyama_to_haru/">note</a>
+                <a href="https://note.com/oyama_to_haru/" target="_blank" rel="noopener noreferrer">note</a>
                 <br>
-                <a href="https://scrapbox.io/harudesign/">Scrapbox</a>
+                <a href="https://scrapbox.io/harudesign/" target="_blank" rel="noopener noreferrer">Scrapbox</a>
                 <br>
-                <a href="https://github.com/haru24884">Github</a>
+                <a href="https://github.com/haru24884" target="_blank" rel="noopener noreferrer">Github</a>
               </div>
           </div>
         </div>
