--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Haruna.N's portfolio</title>
-    <link rel="icon" href="./assets/image/logo.png">
+    <link rel="icon" href="./assets/image/logo-circle.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <script>
       (function(d) {
@@ -107,21 +107,21 @@
           <div id="text-wrapper-works">
           <!-- Katten -->
             <div class="works-content">
-                <a id="katten" href="https://haru24884.notion.site/Katten-ed84453a15f745c0973f7a2fb6ca5fe0" target="_blank" rel="noopener noreferrer">Katten</a>
+                <a id="katten" href="https://haru24884.notion.site/Katten-b572478ad1534ac388a95ea79e30a847" target="_blank" rel="noopener noreferrer">Katten</a>
                 <p>アプリコンセプト・デザイン</p>
-                <p>”いつでも見られる物置棚”</p>
+                <p>”暮らしを育てるリマインダー”</p>
             </div>
 
           <!-- Craftshop -->
             <div class="works-content">
-                <a id="craftshop" href="https://haru24884.notion.site/Craft-shop-c68645c633dc41aea2c26dbd52147b64" target="_blank" rel="noopener noreferrer">Craftshop</a>
+                <a id="craftshop" href="https://haru24884.notion.site/Craft-shop-892d5d53221c4b5b926142be676e8377" target="_blank" rel="noopener noreferrer">Craftshop</a>
                 <p>ECサイト・ロゴデザイン</p>
                 <p>”愛される手仕事を伝える名刺”</p>
             </div>
 
           <!-- yaotan -->
             <div class="works-content">
-                <a id="yaotan" href="https://haru24884.notion.site/834df43eb3134867a125a275e10fd272" target="_blank" rel="noopener noreferrer">やおたん</a>
+                <a id="yaotan" href="https://haru24884.notion.site/3c4ab5ee0b504d63a5fcf562cc4d841f" target="_blank" rel="noopener noreferrer">やおたん</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”地域を、お店から好きになる。”</p>
             </div>
