--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div id="top-img"></div>
           <h1 id="top-title">Haruna.N's portfolio</h1>
             <div id="pdf">
-              <a href="https://drive.google.com/file/d/1czXzXj35lGNcgtMZZ8J9_EGiPrG_uaOu/view?usp=share_link" target="_blank" rel="noopener noreferrer">PDF版をダウンロードする</a>
+              <a href="https://drive.google.com/file/d/1ukIY6QoT6pjDK-GUDrM9szpkireDtZ4c/view?usp=share_link">PDF版をダウンロードする</a>
             </div>
       </div>
       <!-- //top -->
@@ -142,7 +142,7 @@
                 <br>
                 <a href="https://scrapbox.io/harudesign/" target="_blank" rel="noopener noreferrer">Scrapbox</a>
                 <br>
-                <a href="https://github.com/haru24884" target="_blank" rel="noopener noreferrer">Github</a>
+                <a href="https://github.com/haru24884" target="_blank" rel="noopener noreferrer">GitHub</a>
               </div>
           </div>
         </div>
