change pic of works

--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@
           <h2 class="title">Works</h2>
           <div id="text-wrapper-works">
           <!-- Katten -->
-            <div class="works-content">
+            <div class="works-content" id="works-content-katten">
                 <a id="katten" href="https://haru24884.notion.site/Katten-b572478ad1534ac388a95ea79e30a847" target="_blank" rel="noopener noreferrer">Katten</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”暮らしを育てるリマインダー”</p>
             </div>
 
           <!-- Craftshop -->
-            <div class="works-content">
+            <div class="works-content" id="works-content-craftshop">
                 <a id="craftshop" href="https://haru24884.notion.site/Craft-shop-892d5d53221c4b5b926142be676e8377" target="_blank" rel="noopener noreferrer">Craftshop</a>
                 <p>ECサイト・ロゴデザイン</p>
                 <p>”愛される手仕事を伝える名刺”</p>
             </div>
 
           <!-- yaotan -->
-            <div class="works-content">
+            <div class="works-content" id="works-content-yaotan">
                 <a id="yaotan" href="https://haru24884.notion.site/3c4ab5ee0b504d63a5fcf562cc4d841f" target="_blank" rel="noopener noreferrer">やおたん</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”地域を、お店から好きになる。”</p>
