add google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Haruna.N's portfolio</title>
     <link rel="icon" href="./assets/image/logo-circle.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-503H6WFXDE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-503H6WFXDE');
+    </script>
     <script>
       (function(d) {
         var config = {
