--- a/index.html
+++ b/index.html
@@ -116,25 +116,31 @@
           <div id="text-wrapper-works">
 
           <!-- yaotan -->
-          <div class="works-content" id="works-content-yaotan">
-            <a id="yaotan" href="https://haru24884.notion.site/3c4ab5ee0b504d63a5fcf562cc4d841f" target="_blank" rel="noopener noreferrer">やおたん</a>
-            <p>アプリコンセプト・デザイン</p>
-            <p>”地域を、お店から好きになる。”</p>
-          </div>
+          <a href="https://haru24884.notion.site/3c4ab5ee0b504d63a5fcf562cc4d841f" target="_blank" rel="noopener noreferrer" alt="やおたん">
+            <div class="works-content" id="works-content-yaotan">
+              <p id="yaotan">やおたん</p>
+              <p>アプリコンセプト・デザイン</p>
+              <p>”地域を、お店から好きになる。”</p>
+            </div>
+          </a>
 
           <!-- Craftshop -->
+          <a href="https://haru24884.notion.site/Craft-shop-892d5d53221c4b5b926142be676e8377" target="_blank" rel="noopener noreferrer" alt="Craftshop">
             <div class="works-content" id="works-content-craftshop">
-                <a id="craftshop" href="https://haru24884.notion.site/Craft-shop-892d5d53221c4b5b926142be676e8377" target="_blank" rel="noopener noreferrer">Craftshop</a>
+                <p id="craftshop">Craft shop</p>
                 <p>ECサイト・ロゴデザイン</p>
                 <p>”愛される手仕事を伝える名刺”</p>
             </div>
+          </a>
 
           <!-- Katten -->
+          <a href="https://haru24884.notion.site/Katten-b572478ad1534ac388a95ea79e30a847" target="_blank" rel="noopener noreferrer" alt="Katten">
             <div class="works-content" id="works-content-katten">
-              <a id="katten" href="https://haru24884.notion.site/Katten-b572478ad1534ac388a95ea79e30a847" target="_blank" rel="noopener noreferrer">Katten</a>
+              <p id="katten">Katten</p>
               <p>アプリコンセプト・デザイン</p>
               <p>”おせっかいリマインダーアプリ”</p>
             </div>
+          </a>
 
           </div>
         </div>
