add cafe for works

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
             </div>
           </a>
 
+          <!-- cafe -->
+          <a href="https://haru24884.notion.site/36f6d16d2a42469cbe47733260bb6e6c" target="_blank" rel="noopener noreferrer" alt="Katten">
+            <div class="works-content" id="works-content-cafe">
+              <p id="cafe">福嶋屋～発酵カフェ～</p>
+              <p>学生カフェの企画・運営</p>
+              <p>”ほっ”と一息つこう。</p>
+            </div>
+          </a>          
+
           </div>
         </div>
       </section>
