add privacy policy

--- a/index.html
+++ b/index.html
@@ -180,7 +180,12 @@
     <footer>
       <div id="footer-content">
         <div id="footer-bar"></div>
-        <div id="footer-logo"></div>
+        <a href="./pages/privacy.html">
+          プライバシーポリシー
+        </a>
+        <a href="#TOP">
+          <div id="footer-logo"></div>
+        </a>
         <p>
           &copy; Haruna.N 2022
         </p>
